header and steps ajustment

--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
             <div class="header-title">Завершённые дела</div>
             <div class="header-title">Частые вопросы</div>
             <div class="header-title">Контакты</div>
-            </div>
             <a class="red-btn-header" href="tel:+79275141259"><svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.17783 4.89722C7.54113 4.89722 7.87583 5.09423 8.05213 5.41185L9.27538 7.61525C9.43553 7.90375 9.44303 8.2527 9.29548 8.54785L8.11708 10.9047C8.11708 10.9047 8.45858 12.6604 9.88778 14.0896C11.317 15.5188 13.0668 15.8544 13.0668 15.8544L15.4233 14.6762C15.7186 14.5285 16.0678 14.5362 16.3564 14.6966L18.5661 15.9251C18.8834 16.1015 19.0802 16.4361 19.0802 16.7991V19.3359C19.0802 20.6277 17.8802 21.5608 16.6562 21.1477C14.1422 20.2995 10.2399 18.6844 7.76648 16.2109C5.29303 13.7375 3.67793 9.83515 2.82966 7.3212C2.41665 6.09715 3.3497 4.89722 4.64152 4.89722H7.17783Z" fill="white" stroke="white" stroke-width="2" stroke-linejoin="round"/>
-                </svg>
-                <div class="btn-text-content">
-                    <div> 
-                        8 (8442) 96-67-67  
-                    </div>
-                    <div> 
-                         8 927 512-52-52
-                    </div>
-                </div>
-            </a>
+              <path d="M7.17783 4.89722C7.54113 4.89722 7.87583 5.09423 8.05213 5.41185L9.27538 7.61525C9.43553 7.90375 9.44303 8.2527 9.29548 8.54785L8.11708 10.9047C8.11708 10.9047 8.45858 12.6604 9.88778 14.0896C11.317 15.5188 13.0668 15.8544 13.0668 15.8544L15.4233 14.6762C15.7186 14.5285 16.0678 14.5362 16.3564 14.6966L18.5661 15.9251C18.8834 16.1015 19.0802 16.4361 19.0802 16.7991V19.3359C19.0802 20.6277 17.8802 21.5608 16.6562 21.1477C14.1422 20.2995 10.2399 18.6844 7.76648 16.2109C5.29303 13.7375 3.67793 9.83515 2.82966 7.3212C2.41665 6.09715 3.3497 4.89722 4.64152 4.89722H7.17783Z" fill="white" stroke="white" stroke-width="2" stroke-linejoin="round"/>
+              </svg>
+              <div class="btn-text-content">
+                  <div> 
+                      8 (8442) 96-67-67  
+                  </div>
+                  <div> 
+                       8 927 512-52-52
+                  </div>
+              </div>
+          </a>
+            </div>
         </div>
     </div>
 </div>
@@ -271,12 +271,16 @@
                 <div class="steps-subtitle"></div>
                 <div class="steps-content">
                     <div class="steps-item">
+                      Кредиты в банках + штрафы, пени и неустойки
                     </div>
                     <div class="steps-item">
+                      Коммунальные долги
                     </div>
                     <div class="steps-item">
+                      Долги по кредитным картам
                     </div>
                     <div class="steps-item">
+                      Штрафы ГИБДД
                     </div>
                 </div>
             </div>
