adding new block

--- a/index.html
+++ b/index.html
@@ -104,166 +104,48 @@
         </div>
     </div>
     <div class="services-bg">
-        <div class="wrapper">
-            <div class="services">
-                <div class="service-title">Варианты решения</div>
-                <div class="service-content">
-                    <div class="service-item">
-                        <div class="tariff-card">
-                            <div class="tariff-header">
-                              <p class="tariff-title">Тариф «Эконом»</p>
-                              <p class="tariff-name">Финансово-правовая защита</p>
-                            </div>
-                            <div class="tariff-body">
-                              <p class="tariff-price">от <span>6 000 ₽</span></p>
-                              <div class="tariff-features">
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Остановка роста долга (фиксация задолженности)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Объединение всех кредитов в один</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Уменьшение размера ежемесячных платежей</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Списание штрафов и пеней (частично или полностью)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Защита имущества от ареста, сохранение имущества за Вами</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Юридические консультации на всех этапах работы</p>
-                                </div>
-                              </div>
-                              <button class="tariff-button">Оставить заявку</button>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="service-item">
-                        <div class="tariff-card">
-                            <div class="tariff-header">
-                              <p class="tariff-title">Тариф «Эконом»</p>
-                              <p class="tariff-name">Финансово-правовая защита</p>
-                            </div>
-                            <div class="tariff-body">
-                              <p class="tariff-price">от <span>6 000 ₽</span></p>
-                              <div class="tariff-features">
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Остановка роста долга (фиксация задолженности)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Объединение всех кредитов в один</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Уменьшение размера ежемесячных платежей</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Списание штрафов и пеней (частично или полностью)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Защита имущества от ареста, сохранение имущества за Вами</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Юридические консультации на всех этапах работы</p>
-                                </div>
-                              </div>
-                              <button class="tariff-button">Оставить заявку</button>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="service-item">
-                        <div class="tariff-card">
-                            <div class="tariff-header">
-                              <p class="tariff-title">Тариф «Эконом»</p>
-                              <p class="tariff-name">Финансово-правовая защита</p>
-                            </div>
-                            <div class="tariff-body">
-                              <p class="tariff-price">от <span>6 000 ₽</span></p>
-                              <div class="tariff-features">
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Остановка роста долга (фиксация задолженности)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Объединение всех кредитов в один</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Уменьшение размера ежемесячных платежей</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Списание штрафов и пеней (частично или полностью)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Защита имущества от ареста, сохранение имущества за Вами</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Юридические консультации на всех этапах работы</p>
-                                </div>
-                              </div>
-                              <button class="tariff-button">Оставить заявку</button>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="service-item">
-                        <div class="tariff-card">
-                            <div class="tariff-header">
-                              <p class="tariff-title">Тариф «Эконом»</p>
-                              <p class="tariff-name">Финансово-правовая защита</p>
-                            </div>
-                            <div class="tariff-body">
-                              <p class="tariff-price">от <span>6 000 ₽</span></p>
-                              <div class="tariff-features">
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Остановка роста долга (фиксация задолженности)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Объединение всех кредитов в один</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Уменьшение размера ежемесячных платежей</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Списание штрафов и пеней (частично или полностью)</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Защита имущества от ареста, сохранение имущества за Вами</p>
-                                </div>
-                                <div class="tariff-feature">
-                                  <div class="tariff-feature-icon">✔</div>
-                                  <p class="tariff-feature-text">Юридические консультации на всех этапах работы</p>
-                                </div>
-                              </div>
-                              <button class="tariff-button">Оставить заявку</button>
-                            </div>
-                          </div>
-                    </div>
-                </div>
-            </div>
+      <div class="wrapper" style="
+      display: flex;
+      justify-content: center;
+  ">
+        <div class="carousel-wrapper">
+          <button class="control prev" id="prev">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <polyline points="15 18 9 12 15 6"></polyline>
+              </svg>
+          </button>
+          <div class="carousel">
+              <div class="carousel-track">
+                  <div class="carousel-item">
+                      <div class="overlay-images">
+                          <img src="image1.jpg" alt="Background Image">
+                          <img src="image2.jpg" alt="Overlay Image">
+                      </div>
+                      <div class="content">
+                          <h3>Решение суда No41-34354/22</h3>
+                          <p>Списано/сумма</p>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <div class="overlay-images">
+                          <img src="image3.jpg" alt="Background Image">
+                          <img src="image4.jpg" alt="Overlay Image">
+                      </div>
+                      <div class="content">
+                          <h3>Решение суда No42-56565/22</h3>
+                          <p>Списано/сумма</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <button class="control next" id="next">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <polyline points="9 18 15 12 9 6"></polyline>
+              </svg>
+          </button>
+      </div>
         </div>
-    </div>
+      </div> 
     <div class="steps-bg">
         <div class="wrapper">
             <div class="steps">
@@ -420,6 +302,33 @@
             item.classList.toggle('active', !isActive);
         });
     });
+    const track = document.querySelector('.carousel-track');
+        const items = document.querySelectorAll('.carousel-item');
+        const prevButton = document.getElementById('prev');
+        const nextButton = document.getElementById('next');
+
+        let currentIndex = 0;
+
+        function updateCarousel() {
+            const width = items[0].getBoundingClientRect().width;
+            track.style.transform = `translateX(-${currentIndex * width}px)`;
+        }
+
+        nextButton.addEventListener('click', () => {
+            if (currentIndex < items.length - 1) {
+                currentIndex++;
+                updateCarousel();
+            }
+        });
+
+        prevButton.addEventListener('click', () => {
+            if (currentIndex > 0) {
+                currentIndex--;
+                updateCarousel();
+            }
+        });
+
+        window.addEventListener('resize', updateCarousel);
 </script>
 </body>
 </html>
