--- a/index.html
+++ b/index.html
@@ -91,8 +91,6 @@
             <div class="interactive-block">
                 <div class="intro-name-first">ИЗБАВИМ</div>
                 <div class="intro-name-second">ОТ ДОЛГОВ НА 100%</div>
-                <div class="picture-block">
-                </div>
             </div>
             <div class="button-block">
                 <a class="white-btn" href="#form-title-scroll">Растут долги и штрафы?</a>
@@ -103,49 +101,74 @@
             </div>
         </div>
     </div>
-    <div class="services-bg">
-      <div class="wrapper" style="
-      display: flex;
-      justify-content: center;
-  ">
-        <div class="carousel-wrapper">
-          <button class="control prev" id="prev">
+    <div class="carousel-bg">
+        <div class="wrapper" style="display:flex; justify-content: center;">
+          <div class="carousel-wrapper">
+            <button class="control prev" id="prev">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <polyline points="15 18 9 12 15 6"></polyline>
+                <polyline points="15 18 9 12 15 6"></polyline>
               </svg>
-          </button>
-          <div class="carousel">
+            </button>
+            <div class="carousel">
               <div class="carousel-track">
-                  <div class="carousel-item">
-                      <div class="overlay-images">
-                          <img src="image1.jpg" alt="Background Image">
-                          <img src="image2.jpg" alt="Overlay Image">
-                      </div>
-                      <div class="content">
-                          <h3>Решение суда No41-34354/22</h3>
-                          <p>Списано/сумма</p>
-                      </div>
+                <div class="carousel-item">
+                  <div class="overlay-images">
+                    <div class="images-container">
+                      <img src="court_decisions/background/Дело A12-291-2023 списан долг 593 440,87 руб.-3.png" alt="Background Image" class="background-image">
+                      <img src="court_decisions/overlay/Дело A12-291-2023 списан долг 593 440,87 руб.-2.png" alt="Overlay Image" class="overlay-image">
+                    </div>
                   </div>
-                  <div class="carousel-item">
-                      <div class="overlay-images">
-                          <img src="image3.jpg" alt="Background Image">
-                          <img src="image4.jpg" alt="Overlay Image">
-                      </div>
-                      <div class="content">
-                          <h3>Решение суда No42-56565/22</h3>
-                          <p>Списано/сумма</p>
-                      </div>
+                  <div class="content">
+                    <h3>Решение суда No42-56565/22</h3>
+                    <p>Списано/сумма</p>
                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="overlay-images">
+                    <div class="images-container">
+                      <img src="court_decisions/background/Дело A12-291-2023 списан долг 593 440,87 руб.-3.png" alt="Background Image" class="background-image">
+                      <img src="court_decisions/overlay/Дело A12-291-2023 списан долг 593 440,87 руб.-2.png" alt="Overlay Image" class="overlay-image">
+                    </div>
+                  </div>
+                  <div class="content">
+                    <h3>Решение суда No42-56565/22</h3>
+                    <p>Списано/сумма</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="overlay-images">
+                    <div class="images-container">
+                      <img src="court_decisions/background/Дело A12-291-2023 списан долг 593 440,87 руб.-3.png" alt="Background Image" class="background-image">
+                      <img src="court_decisions/overlay/Дело A12-291-2023 списан долг 593 440,87 руб.-2.png" alt="Overlay Image" class="overlay-image">
+                    </div>
+                  </div>
+                  <div class="content">
+                    <h3>Решение суда No42-56565/22</h3>
+                    <p>Списано/сумма</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="overlay-images">
+                    <div class="images-container">
+                      <img src="court_decisions/background/Дело A12-291-2023 списан долг 593 440,87 руб.-3.png" alt="Background Image" class="background-image">
+                      <img src="court_decisions/overlay/Дело A12-291-2023 списан долг 593 440,87 руб.-2.png" alt="Overlay Image" class="overlay-image">
+                    </div>
+                  </div>
+                  <div class="content">
+                    <h3>Решение суда No42-56565/22</h3>
+                    <p>Списано/сумма</p>
+                  </div>
+                </div>
               </div>
-          </div>
-          <button class="control next" id="next">
+            </div>
+            <button class="control next" id="next">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <polyline points="9 18 15 12 9 6"></polyline>
+                <polyline points="9 18 15 12 9 6"></polyline>
               </svg>
-          </button>
-      </div>
+            </button>
+          </div>
         </div>
-      </div> 
+      </div>
     <div class="steps-bg">
         <div class="wrapper">
             <div class="steps">
@@ -164,28 +187,6 @@
                     <div class="steps-item">
                       Штрафы ГИБДД
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="faq-bg">
-        <div class="wrapper">
-            <div class="faq">
-                <div class="faq-title">
-                    Ответы на частые вопросы
-                </div>
-                <div class="faq-content">
-                    <div class="faq-item">
-                        <div class="faq-name">
-                            Что такое банкротство гражданина?
-                            <div class="faq-button">+</div>
-                        </div>
-                        <div class="faq-text">
-                            Банкротство гражданина – это предусмотренная законом (Федеральный закон от 26.10.2002 N 127-ФЗ "О НЕСОСТОЯТЕЛЬНОСТИ (БАНКРОТСТВЕ)", ГЛАВА Х) процедура, которая направлена на освобождение гражданина от имеющихся у него долгов.<br><br>
-                            Процедура является абсолютно законной и проходит через суд.<br><br>
-                            После успешного завершения процедуры, гражданину выдается официальный судебный документ, в котором указано, что он больше никому ничего не должен.
-                        </div>
-                    </div>      
                 </div>
             </div>
         </div>
@@ -303,32 +304,32 @@
         });
     });
     const track = document.querySelector('.carousel-track');
-        const items = document.querySelectorAll('.carousel-item');
-        const prevButton = document.getElementById('prev');
-        const nextButton = document.getElementById('next');
+const items = document.querySelectorAll('.carousel-item');
+const prevButton = document.getElementById('prev');
+const nextButton = document.getElementById('next');
 
-        let currentIndex = 0;
+let currentIndex = 0;
 
-        function updateCarousel() {
-            const width = items[0].getBoundingClientRect().width;
-            track.style.transform = `translateX(-${currentIndex * width}px)`;
-        }
+function updateCarousel() {
+    const width = items[0].getBoundingClientRect().width + 32; // Ширина элемента + отступ
+    track.style.transform = `translateX(-${currentIndex * width}px)`;
+}
 
-        nextButton.addEventListener('click', () => {
-            if (currentIndex < items.length - 1) {
-                currentIndex++;
-                updateCarousel();
-            }
-        });
+nextButton.addEventListener('click', () => {
+    if (currentIndex < items.length - 2) { // Прокрутка на один элемент
+        currentIndex++;
+        updateCarousel();
+    }
+});
 
-        prevButton.addEventListener('click', () => {
-            if (currentIndex > 0) {
-                currentIndex--;
-                updateCarousel();
-            }
-        });
+prevButton.addEventListener('click', () => {
+    if (currentIndex > 0) {
+        currentIndex--;
+        updateCarousel();
+    }
+});
 
-        window.addEventListener('resize', updateCarousel);
+window.addEventListener('resize', updateCarousel);
 </script>
 </body>
 </html>
