--- a/index.html
+++ b/index.html
@@ -1196,11 +1196,11 @@
     <div id="pdfModal" class="modal">
       <span class="close">&times;</span>
       <div class="modal-content">
-          <object id="pdfViewer" data="" type="application/pdf" width="100%" height="700px">
+          <object id="pdfViewer" src="" type="application/pdf" width="100%" height="700px">
               <p>К сожалению, ваш браузер не поддерживает отображение PDF. <a id="pdfDownloadLink" href="#">Загрузите документ, кликнув здесь.</a></p>
           </object>
       </div>
-  </div>
+    </div>
   <div class="free-consult-modal" id="freeConsultModal">
     <div class="free-consult-modal-content">
         <span class="free-consult-close">&times;</span>
