--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
             <div class="header-title" id="scroll-to-deals-header">Завершённые дела</div>
             <div class="header-title" id="scroll-to-contacts-header">Контакты</div>
+            <div class="header-title" id="scroll-to-stages-header">Этапы работы</div>
             <a class="red-btn-header" href="tel:+79275125252"><svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M7.17783 4.89722C7.54113 4.89722 7.87583 5.09423 8.05213 5.41185L9.27538 7.61525C9.43553 7.90375 9.44303 8.2527 9.29548 8.54785L8.11708 10.9047C8.11708 10.9047 8.45858 12.6604 9.88778 14.0896C11.317 15.5188 13.0668 15.8544 13.0668 15.8544L15.4233 14.6762C15.7186 14.5285 16.0678 14.5362 16.3564 14.6966L18.5661 15.9251C18.8834 16.1015 19.0802 16.4361 19.0802 16.7991V19.3359C19.0802 20.6277 17.8802 21.5608 16.6562 21.1477C14.1422 20.2995 10.2399 18.6844 7.76648 16.2109C5.29303 13.7375 3.67793 9.83515 2.82966 7.3212C2.41665 6.09715 3.3497 4.89722 4.64152 4.89722H7.17783Z" fill="white" stroke="white" stroke-width="2" stroke-linejoin="round"/>
               </svg>
@@ -138,6 +139,7 @@
     </div>
         <div class="side-sheet-header-title" id="scroll-to-deals-burger">Завершённые дела</div>
         <div class="side-sheet-header-title" id="scroll-to-contacts-burger">Контакты</div>
+        <div class="side-sheet-header-title" id="scroll-to-stages-burger">Этапы работы</div>
         <div class="side-sheet-header-title header-adress" style=" inline-size: 15rem !important;" >Волжский, пр. Ленина, д. 201, оф. 8</div>
         <a class="side-sheet-red-btn-header" href="tel:+79275125252"><svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M7.17783 4.89722C7.54113 4.89722 7.87583 5.09423 8.05213 5.41185L9.27538 7.61525C9.43553 7.90375 9.44303 8.2527 9.29548 8.54785L8.11708 10.9047C8.11708 10.9047 8.45858 12.6604 9.88778 14.0896C11.317 15.5188 13.0668 15.8544 13.0668 15.8544L15.4233 14.6762C15.7186 14.5285 16.0678 14.5362 16.3564 14.6966L18.5661 15.9251C18.8834 16.1015 19.0802 16.4361 19.0802 16.7991V19.3359C19.0802 20.6277 17.8802 21.5608 16.6562 21.1477C14.1422 20.2995 10.2399 18.6844 7.76648 16.2109C5.29303 13.7375 3.67793 9.83515 2.82966 7.3212C2.41665 6.09715 3.3497 4.89722 4.64152 4.89722H7.17783Z" fill="white" stroke="white" stroke-width="2" stroke-linejoin="round"/>
@@ -200,9 +202,6 @@
                     <div class="consult-button">
                       Бесплатная консультация
                     </div> 
-                    <a class="pricing-button" href="tel:+79275125252">
-                      Узнать цены
-                    </a>
                     <a class = "law" href="#terms_use">
                         <span>Важно! </span>Работаем строго по договору и в рамках <span class = "law-link"> ФЗ-127</span>
                     </a>
@@ -1246,6 +1245,8 @@ document.querySelectorAll('.header-title, .side-sheet-header-title').forEach(tri
             smoothScrollTo('.carousel-bg');
         } else if (trigger.textContent.includes('Контакты')) {
             smoothScrollTo('.footer-bg');
+        } else if(trigger.textContent.includes('Этапы работы')) {
+            smoothScrollTo('.stages-bg');
         }
     });
 });
