--- a/index.html
+++ b/index.html
@@ -164,9 +164,17 @@
             <div class="wrapper">
             <div class="intro">
             <div class="interactive-block">
-                <div class="intro-name-first">ИЗБАВИМ</div>
-                <div class="intro-name-second">ОТ ДОЛГОВ НА 100%</div>
+                <div class="intro-name-first">СПИСЫВАЕМ</div>
+                <div class="intro-name-second">ДОЛГИ С ИПОТЕКОЙ</div>
                 <div class="intro-adv-block">
+                  <div class="adv-exp-year-deals">
+                    <div class="adv-count">
+Гарантия результата
+                    </div>
+                    <div class="adv-name">
+350+ успешных дел
+                    </div>
+                  </div>
                   <div class="adv-exp-year">
                     <div class="adv-count">
 7 лет
@@ -175,20 +183,12 @@
 Опыта работы
                     </div>
                   </div>
-                  <div class="adv-exp-year-deals">
-                    <div class="adv-count">
-Более 350
-                    </div>
-                    <div class="adv-name">
-Успешных дел
-                    </div>
-                  </div>
                   <div class="                                          ">
                     <div class="adv-count">
-50+
+Рассрочка
                     </div>
                     <div class="adv-name">
-Специалистов
+Платите удобно и без переплат
                     </div>
                   </div>
                   
