--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 Гарантия результата
                     </div>
                     <div class="adv-name">
-350+ успешных дел
+прописана в договоре
                     </div>
                   </div>
                   <div class="adv-exp-year">
@@ -320,7 +320,7 @@
                   <span class="value">1 день</span>
                     <strong class="title">Первое судебное заседание</strong>
                     <ul class="list">
-											<li>Проходит первое судебное заседание, на котором должника признают финансово несостоятельным (банкротом)</li>
+											<li>Проходит первое судебное заседание, на котором должника признают банкротом</li>
 											<li>Суд утвердит кандидатуру Финансового управляющего</li>
 											<li>Все кредиторы будут уведомлены о процедуре банкротства и перестанут звонить и писать должнику</li>
 											<li>Суд назначит дату и время второго судебного заседания, на котором будет списан долг</li>
@@ -330,11 +330,14 @@
                   <span class="value">4-6 месяцев</span>
                     <strong class="title">Работа финансового управляющего</strong>
                     <ul class="list">
-                        <li>Финансовый управляющий делает запросы по должнику в гос.органы</li>
-                        <li>После получения ответов детально их проанализирует</li>
-                        <li>Сделает анализ финансового состояния должника</li>
-                        <li>Подготовит отчет о необходимости списания долгов</li>
-                        <li>Отправит в суд ходатайство о завершении процедуры</li>
+                        <li>Финансовый управляющий делает запросы по должнику 
+                          в гос.органы и кредитные организации анализирует представленные ответы</li>
+                        <li>Проводит финансовый анализ деятельности должника</li>
+                        <li>Подготавливает заключение об отсутствии фиктивного и преднамеренного банкротства</li>
+                        <li>Проводит анализ сделок за 3 года на предмет их оспоримости</li>
+                        <li>Подготовит итоговый отчет о необходимости списания 
+                          долгов и завершения процедуры банкротства и направит его в суд
+                        </li>
                     </ul>
                 </div>
                 <div class="item_list" data-step="6">
@@ -1217,7 +1220,7 @@
             <button type="submit" class="free-consult-submit">Отправить</button>
         </form>
     </div>
-</div>
+  </div>
 </div>
 <script>
 
